--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Резюме</title>
+        <title>Резюме | Константин Цивилев</title>
     </head>
     <body>
 
         <div class="card">
-            <img class="ava" src="img/lXKxT-XloyQ.jpg" alt="Constantin Civilev">
+            <img class="ava" src="lXKxT-XloyQ.jpg" alt="Constantin Civilev">
             <h1 class="title">Константин Цивилев</h1>
             <div class="text">
             <h2 class="sub-title">Образование</h2>
