--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             <h1 class="title">Константин Цивилев</h1>
             <div class="text">
             <h2 class="sub-title">Образование</h2>
-                <p class="p1"><b>ВГСПУ <br>(2017 -2022)</b></p>
+                <p class="p1"><b>ВГСПУ<br>(2017 -2022)</b></p>
                 <p class="p2">Бакалавр, преподаватель истории и английского языка</p>
+                <p class="p1"><b>Hexlet<br>Frontend developer<br>(10/2022 -08/2023)</b></p>
+                <p class="p2">HTML, CSS, JS, React. Redux Toolkit, DOM API, знания о архитектуре, инфраструктуре, алгоритмах и структурах данных</p>
 
             <h2 class="sub-title">Опыт работы</h2>
                 <p class="p1"><b>ВРМДОО "Участие <br>(2013 - 2021)<br>Вожатый, воспитатель, старший вожатый</b></p>
