--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <h2 class="sub-title2">Soft skills</h2>
             <h2 class="sub-title2">Hard skills</h2>
                 <ul class="list1">
-                    <li>Коммуникабельность</li>
-                    <li>Умение работать в команде</li>
+                    <li>Умение слушать и слышать собеседника</li>
                     <li>Критическое мышление</li>
+                    <li>Умение работать в команде</li>
                     <li>Креативность</li>
                     <li>Навык "гуглить"</li>
                 </ul>
